# Time-series

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/tsagro/: __init__.py  envLoader.py  env_gatherer.py
